--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,11 @@
       "default_icon": "icon16.png",
       "default_popup": "popup.html"
     },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["analyzer.js"]
+        }
+    ],
     "permissions": ["scripting", "tabs", "activeTab"]
   }
