--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,8 @@
     "background": {
         "scripts": ["background.js"]
     },
-    "permissions": ["tabs", "activeTab"]
+    "browser_action": {
+        "default_popup": "popup.html"
+    },
+    "permissions": ["storage", "tabs", "activeTab"]
   }
